* Rails uses United States not United State of America

--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,7 +1,11 @@
-== 1.0.2
+== 1.0.3 released 2009-07-08
+
+* Rails uses United States not United State of America
+
+== 1.0.2 released 2009-07-08
 
 * Remove notifications with a successful severity in the errors message.
-* Added country code mapping so that we can pass full country named and have it convert it to a FedEx friendly code behind the scenes.
+* Added country code mapping so that we can pass full country names and have it convert it to a FedEx friendly code behind the scenes.
 
 == 1.0.1 released 2009-07-08
 
