--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 1.0.5 released 2009-07-08
+
+* Added request to error objects so you can see both the raw request and response.
+
 == 1.0.4 released 2009-07-08
 
 * Added state code mapping so that we can pass full state names and have it convert it to a FedEx friendly code behind the scenes.
