--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,8 @@
+== 1.1.1 released 2009-07-17
+
+* Added :just_validate options for creating shipments, that leverages FedExs validation option without creating a shipment.
+* Added more shipper and recipient options, also standardized those options between rating and shipping to create consistency.
+
 == 1.1.0 released 2009-07-16
 
 * Added another layer to tracking. You dont get an array of events anymore, you get a Shippinglogic::Fedex::Track::Details object that has information the single shipment. Such as delivery date, signature name, etc. To access the events you just call the events method on this object.
