--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 1.1.2 released 2009-07-17
+
+* Added :department for shipper and recipient options.
+
 == 1.1.1 released 2009-07-17
 
 * Added :just_validate options for creating shipments, that leverages FedExs validation option without creating a shipment.
