--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 1.1.3 released 2009-07-17
+
+* Apparently department is not an option, even though FedEx docs say it is and the test services allow it. Production services say its not valid.
+
 == 1.1.2 released 2009-07-17
 
 * Added :department for shipper and recipient options.
